crates/uv-distribution-filename/src/snapshots/uv_distribution_filename__wheel__tests__compatibility_identifier_truncation-2.snap
---
source: crates/uv-distribution-filename/src/wheel.rs
expression: filename.compatibility_identifier()
---
0.2.4-py3-none-any
