crates/uv-distribution-filename/src/snapshots/uv_distribution_filename__wheel__tests__compatibility_identifier_truncation-3.snap
---
source: crates/uv-distribution-filename/src/wheel.rs
expression: filename.compatibility_identifier()
---
1.26.2-f886a4d8ca13e12e
