crates/uv-distribution-filename/src/snapshots/uv_distribution_filename__wheel__tests__compatibility_identifier_truncation-4.snap
---
source: crates/uv-distribution-filename/src/wheel.rs
expression: filename.compatibility_identifier()
---
1.1.1.1.1.1.1.1.1.1-80bf8598e9647cf7
