crates/uv-distribution-filename/src/snapshots/uv_distribution_filename__wheel__tests__compatibility_identifier_truncation.snap
---
source: crates/uv-distribution-filename/src/wheel.rs
expression: filename.compatibility_identifier()
---
0.51.0-py3-none-any
